将期末成绩整合进TeacherClass中
