# docs/swagger.yaml
@@ -13,105 +13,6 @@ info:
   title: 成绩录入及查询系统标准接口文档
   version: 0.0.1
 paths:
-  /ShowSource/Stage:
-    post:
-      consumes:
-        - multipart/form-data
-      description: 学生进行阶段性成绩查询
-      parameters:
-        - description: Token
-          in: header
-          name: Authorization
-          required: true
-          type: string
-        - description: 查询页码
-          in: formData
-          name: pageNum
-          required: true
-          type: string
-        - description: 每页条数
-          in: formData
-          name: pageSize
-          required: true
-          type: string
-        - description: 学生名字
-          in: formData
-          name: name
-          type: string
-        - description: 学生学号
-          in: formData
-          name: studentId
-          required: true
-          type: string
-        - description: 教学班号
-          in: formData
-          name: teachingClassId
-          required: true
-          type: string
-        - description: 阶段性测验id
-          in: formData
-          name: sourceStageId
-          type: string
-        - description: 成绩注释
-          in: formData
-          name: scoresNote
-          type: string
-        - description: 成绩
-          in: formData
-          name: scores
-          type: string
-      produces:
-        - application/json
-      summary: 阶段性成绩查询
-      tags:
-        - 成绩查询
-  /ShowSource/final:
-    post:
-      consumes:
-        - multipart/form-data
-      description: 学生进行期末成绩查询
-      parameters:
-        - description: Token
-          in: header
-          name: Authorization
-          required: true
-          type: string
-        - description: 查询页码
-          in: formData
-          name: pageNum
-          required: true
-          type: string
-        - description: 每页条数
-          in: formData
-          name: pageSize
-          required: true
-          type: string
-        - description: 学生名字
-          in: formData
-          name: name
-          type: string
-        - description: 学生学号
-          in: formData
-          name: studentId
-          required: true
-          type: string
-        - description: 教学班号
-          in: formData
-          name: teachingClassId
-          type: string
-        - description: 成绩注释
-          in: formData
-          name: scoresNote
-          type: string
-        - description: 成绩
-          in: formData
-          name: scores
-          type: string
-      produces:
-        - application/json
-      summary: 期末成绩查询
-      tags:
-        - 成绩查询
   /course/delete/{id}:
     get:
       consumes:
@@ -240,179 +141,6 @@ paths:
       summary: 更新课程信息记录
       tags:
         - 课程信息
-  /sourceFinal/delete/{id}:
-    get:
-      consumes:
-        - application/json
-      description: 删除期末成绩
-      parameters:
-        - description: Token
-          in: header
-          name: Authorization
-          required: true
-          type: string
-        - description: 主键
-          in: path
-          name: id
-          required: true
-          type: string
-      produces:
-        - application/json
-      summary: 删除期末成绩
-      tags:
-        - 期末成绩
-  /sourceFinal/insert:
-    post:
-      consumes:
-        - application/json
-      description: 增加期末成绩
-      parameters:
-        - description: Token
-          in: header
-          name: Authorization
-          required: true
-          type: string
-        - description: 学生名字
-          in: formData
-          name: name
-          type: string
-        - description: 学生学号
-          in: formData
-          name: studentId
-          required: true
-          type: string
-        - description: 教学班号
-          in: formData
-          name: teachingClassId
-          type: string
-        - description: 成绩注释
-          in: formData
-          name: scoresNote
-          type: string
-        - description: 成绩
-          in: formData
-          name: scores
-          type: string
-      produces:
-        - application/json
-      responses:
-        "200":
-          description: '{"status": 1}'
-          schema:
-            type: string
-      summary: 增加期末成绩
-      tags:
-        - 期末成绩
-  /sourceFinal/selectByPage:
-    post:
-      consumes:
-        - multipart/form-data
-      description: 分页查询期末成绩
-      parameters:
-        - description: Token
-          in: header
-          name: Authorization
-          required: true
-          type: string
-        - description: 查询页码
-          in: formData
-          name: pageNum
-          required: true
-          type: string
-        - description: 每页条数
-          in: formData
-          name: pageSize
-          required: true
-          type: string
-        - description: 学生名字
-          in: formData
-          name: name
-          type: string
-        - description: 学生学号
-          in: formData
-          name: studentId
-          required: true
-          type: string
-        - description: 教学班号
-          in: formData
-          name: teachingClassId
-          type: string
-        - description: 成绩注释
-          in: formData
-          name: scoresNote
-          type: string
-        - description: 成绩
-          in: formData
-          name: scores
-          type: string
-      produces:
-        - application/json
-      summary: 分页查询期末成绩
-      tags:
-        - 期末成绩
-  /sourceFinal/updateStudent/{teachingClassId}:
-    get:
-      consumes:
-        - application/json
-      description: 同步当前教学班学生信息
-      parameters:
-        - description: Token
-          in: header
-          name: Authorization
-          required: true
-          type: string
-        - description: 教学班号
-          in: path
-          name: teachingClassId
-          required: true
-          type: string
-      produces:
-        - application/json
-      summary: 同步当前教学班学生信息
-      tags:
-        - 期末成绩
-  /sourceFinal/updates:
-    post:
-      consumes:
-        - application/json
-      description: 批量更新期末成绩
-      parameters:
-        - description: Token
-          in: header
-          name: Authorization
-          required: true
-          type: string
-        - description: 学生名字
-          in: formData
-          name: name
-          type: string
-        - description: 学生学号
-          in: formData
-          name: studentId
-          required: true
-          type: string
-        - description: 教学班号
-          in: formData
-          name: teachingClassId
-          type: string
-        - description: 成绩注释
-          in: formData
-          name: scoresNote
-          type: string
-        - description: 成绩
-          in: formData
-          name: scores
-          type: string
-      produces:
-        - application/json
-      responses:
-        "200":
-          description: '{"status": 1}'
-          schema:
-            type: string
-      summary: 批量更新期末成绩
-      tags:
-        - 期末成绩
   /sourceStage/delete/{id}:
     get:
       consumes:
@@ -1197,6 +925,77 @@ paths:
       produces:
         - application/json
       summary: 分页查询教学班学生信息
+      tags:
+        - 教学班信息
+  /teachingClass/selectFinal:
+    post:
+      consumes:
+        - multipart/form-data
+      description: 分页查询期末成绩信息，如果查询第一页，返回总条数，条件非必需
+      parameters:
+        - description: Token
+          in: header
+          name: Authorization
+          required: true
+          type: string
+        - description: 查询页码
+          in: formData
+          name: pageNum
+          required: true
+          type: string
+        - description: 每页条数
+          in: formData
+          name: pageSize
+          required: true
+          type: string
+        - description: 学生学号
+          in: formData
+          name: studentId
+          required: true
+          type: string
+        - description: 姓名
+          in: formData
+          name: name
+          type: string
+        - description: 所在年级
+          in: formData
+          name: grade
+          type: string
+        - description: 所在学院或部门
+          in: formData
+          name: department
+          type: string
+        - description: 所在专业
+          in: formData
+          name: professional
+          type: string
+        - description: 所在班级
+          in: formData
+          name: class
+          type: string
+        - description: 课程名称
+          in: formData
+          name: courseName
+          type: string
+        - description: 课程id
+          in: formData
+          name: courseId
+          type: string
+        - description: 教学班号
+          in: formData
+          name: teachingClassId
+          type: string
+        - description: 任课老师名字
+          in: formData
+          name: courseTeacherName
+          type: string
+        - description: 任课老师id
+          in: formData
+          name: courseTeacherId
+          type: string
+      produces:
+        - application/json
+      summary: 查询期末成绩信息
       tags:
         - 教学班信息
   /teachingClass/update:
